# ros_uav_interfacing

./: CMakeLists.txt  README.md  package.xml
config_files/: apm_config.yaml  apm_pluginlists.yaml  mavlink-router.conf
launch/: aircraft_interface.launch  mavros.launch  transforms.launch
scripts/: USB_latency_fix_x86.sh  start_mavlinkrouter.sh
src/: setRates.cpp
